<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >
  <TextView
      android:textColor="@color/colorPrimaryDark"
      android:textSize="15sp"
      android:padding="10dp"
      android:text="@string/single_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <TextView
      android:id="@+id/tv_storage"
      android:textSize="20sp"
      android:textColor="@color/color_text"
      android:text="@string/storage_title"
      android:padding="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <TextView
      android:id="@+id/tv_camera"
      android:textSize="20sp"
      android:textColor="@color/color_text"
      android:text="@string/camera_title"
      android:padding="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <TextView
      android:textColor="@color/colorPrimaryDark"
      android:textSize="15sp"
      android:padding="10dp"
      android:text="@string/more_header"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
  <TextView
      android:id="@+id/tv_phone"
      android:textSize="20sp"
      android:textColor="@color/color_text"
      android:text="@string/phone_title"
      android:padding="10dp"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"/>
</LinearLayout>